--- a/src/ui/Assets/Styles/patterns/_success-summary.scss
+++ b/src/ui/Assets/Styles/patterns/_success-summary.scss
@@ -2,7 +2,7 @@
   @extend .govuk-error-summary;
   border-color: govuk-colour("green");
 
-  p:last-child {
+  *:last-child {
     margin-bottom: 0;
   }
 }
