--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -44,8 +44,14 @@
           }
         }
 
-        <h2 class="govuk-heading-l">Training with a disability</h2>
-        <p class="govuk-body">Here you should summarise the accessibility of your course. Bear in mind the range of disabilities that applicants may have (eg dyslexia, or physical, hearing and visual impairments). If accessibility varies between schools or other sites, give details. You could also offer examples of how you’ve accommodated candidates with particular accessibility needs.</p>
+        <h2 class="govuk-heading-l">Training with disabilities and other needs</h2>
+        <p class="govuk-body">Say how you support candidates with disabilities and other needs. This could include candidates with:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>dyslexia
+          <li>physical, hearing and visual impairments
+          <li>mental health conditions
+        </ul>
+        <p class="govuk-body">If accessibility varies between locations, give details. It’s also useful to candidates to know how you’ve accommodated others with specific access needs in the past.</p>
         <div id="TrainWithDisability-wrapper" class="govuk-form-group @(train_with_disability ? "govuk-form-group--error" : "")">
           <label asp-for="TrainWithDisability" class="govuk-label govuk-!-font-weight-bold">Training with a disability</label>
           @if (train_with_disability) {
