--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -47,13 +47,13 @@
         <h2 class="govuk-heading-l">Training with disabilities and other needs</h2>
         <p class="govuk-body">Say how you support candidates with disabilities and other needs. This could include candidates with:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>dyslexia
-          <li>physical, hearing and visual impairments
-          <li>mental health conditions
+          <li>dyslexia</li>
+          <li>physical, hearing and visual impairments</li>
+          <li>mental health conditions</li>
         </ul>
         <p class="govuk-body">If accessibility varies between locations, give details. It’s also useful to candidates to know how you’ve accommodated others with specific access needs in the past.</p>
         <div id="TrainWithDisability-wrapper" class="govuk-form-group @(train_with_disability ? "govuk-form-group--error" : "")">
-          <label asp-for="TrainWithDisability" class="govuk-label govuk-!-font-weight-bold">Training with a disability</label>
+          <label asp-for="TrainWithDisability" class="govuk-label govuk-!-font-weight-bold">Training with disabilities and other needs</label>
           @if (train_with_disability) {
             @Html.ValidationMessageFor(m => m.TrainWithDisability, "", new { @class="govuk-error-message" })
           }
