Added required validation for publishing an organisation Removed `/publish` endpoint as `/about` endpoint needs to be the the endpoint user lands on Amended /about` endpoint for validation for publishing and retain the previous saving functionality

--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -84,8 +84,9 @@
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
             <p class="govuk-body">New information will show on all @Model.TabViewModel.OrganisationName courses.</p>
-            <form asp-controller="Organisation" asp-action="Publish" method="post">
+            <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="submit" class="govuk-button" value="Publish" />
+              <input type="hidden" asp-for="@Model.PublishOrganisation" value="true"></input>
             </form>
             break;
           case WorkflowStatus.Published :
@@ -100,7 +101,8 @@
             <h4 class="govuk-heading-m">Publish</h4>
             <p class="govuk-body">New information will show on all @Model.TabViewModel.OrganisationName courses.</p>
 
-            <form asp-controller="Organisation" asp-action="Publish" method="post">
+            <form asp-controller="Organisation" asp-action="about" method="post">
+              <input type="hidden" asp-for="@Model.PublishOrganisation" value="true"></input>
               <input type="submit" class="govuk-button" value="Publish" />
             </form>
             break;
