--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -14,6 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">About your organisation</h2>
       <form asp-controller="Organisation" asp-action="About" method="post">
+        <input type="hidden" asp-for="@Model.PublishOrganisation" value="false"></input>
         <input type="hidden" asp-for="@Model.InstitutionCode"></input>
         @Html.Partial("ErrorSummary")
         <p class="govuk-body">This is your chance to tell applicants why they should choose to train with you. You could describe any advantages and special
