--- a/src/ui/Views/Home/AcceptTerms.cshtml
+++ b/src/ui/Views/Home/AcceptTerms.cshtml
@@ -14,7 +14,7 @@
         <li>is not offensive, inappropriate or discriminatory</li>
         <li>belongs to you</li>
       </ul>
-      <p>Read our full <a href="@Url.Action("AcceptTerms", "Home")">terms and conditions</a>.</p>
+      <p>Read our full <a href="@Url.Action("TandC", "Legal")">terms and conditions</a>.</p>
       <hr class="govuk-footer__section-break">
       <form asp-controller="Home" asp-action="accept-terms" method="post">
         <div class="govuk-form-group">
