Fixed validation for saving org

--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -131,7 +131,7 @@
             break;
           case WorkflowStatus.BlankSubsequentDraft :
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
-            <p class="govuk-body">You need to complete and publish this information.</p>
+            <p class="govuk-body">You have unpublished changes.</p>
 
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
