--- a/src/ui/Views/Home/AcceptTerms.cshtml
+++ b/src/ui/Views/Home/AcceptTerms.cshtml
@@ -1,6 +1,7 @@
 @model AcceptTermsViewModel
 @{
   ViewBag.Title = $"Accept Terms and Conditions";
+  var accept_terms = ViewData.ModelState["TermsAccepted"] != null && ViewData.ModelState["TermsAccepted"].Errors.Any();
 }
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
@@ -16,8 +17,11 @@
       </ul>
       <p>Read our full <a href="@Url.Action("TandC", "Legal")">terms and conditions</a>.</p>
       <hr class="govuk-footer__section-break">
-      <form asp-controller="Home" asp-action="accept-terms" method="post">
-        <div class="govuk-form-group">
+      <form asp-controller="Home" asp-action="AcceptTerms" method="post">
+        <div class="govuk-form-group @(accept_terms ? "govuk-form-group--error" : " ")">
+          @if (accept_terms) {
+            <span asp-validation-for="TermsAccepted" class="govuk-error-message"></span>
+          }
           <div class="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
               <input asp-for="TermsAccepted" class="govuk-checkboxes__input" type="checkbox" />
