Accredited provider, not accrediting
In our Search fact-check for private beta it was highlighted that providers are "accredited" not "accrediting". eg See https://www.gov.uk/government/publications/initial-teacher-training-criteria/initial-teacher-training-itt-criteria-and-supporting-advice

UCAS and users use "Accrediting", but we shouldn't propagate this difference.

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -34,7 +34,7 @@
               <dd>@Model.Course.ProgrammeCode</dd>
             }
             @if (!string.IsNullOrEmpty(@Model.Course.Accrediting)) {
-              <dt>Accrediting provider:</dt>
+              <dt>Accredited provider:</dt>
               <dd>@Model.Course.Accrediting</dd>
             }
             @if (!string.IsNullOrEmpty(@Model.Course.GetRoute())) {
