--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -29,7 +29,7 @@
     if (!string.IsNullOrWhiteSpace(provider.ProviderId))
     {
       <h3 class="govuk-heading-m">
-        <span class="govuk-caption-m">Accrediting provider</span>
+        <span class="govuk-caption-m">Accredited provider</span>
         @provider.ProviderName
       </h3>
     }
