--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -145,6 +145,24 @@
           default:
             break;
         }
+
+        <hr class="related__section-break">
+        <h4 class="heading-medium remove-top-margin">Formatting</h4>
+        <h5 class="heading-small">Links</h5>
+        <p>Use square brackets [] around the link text and round brackets () around the link URL. Make sure there are no spaces between the brackets.</p>
+
+        <p>For example:<br /> [GOV.UK](https://gov.uk/)</p>
+
+        <h5 class="heading-small">Lists</h5>
+        <p>To create a bulleted list:</p>
+        <ul class="list list-bullet">
+          <li>use asterisks (*) to create a bullet point (hyphens also work)</li>
+          <li>make sure there is one space after the asterisk</li>
+          <li>leave 1 empty line space before the bullets start, and one after</li>
+        </ul>
+
+        <p>For example:</p>
+        <p>* list item 1<br/>* list item 2</p>
       </aside>
 
     </div>
