Fixed minor issues

--- a/src/ui/Views/Home/AcceptTerms.cshtml
+++ b/src/ui/Views/Home/AcceptTerms.cshtml
@@ -25,7 +25,7 @@
           <div class="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
               <input asp-for="TermsAccepted" class="govuk-checkboxes__input" type="checkbox" />
-              <label class="govuk-label govuk-checkboxes__label" for="waste-1">
+              <label class="govuk-label govuk-checkboxes__label" for="TermsAccepted">
                 I agree to the terms and conditions
               </label>
             </div>
