Clean up formatting guidance

--- a/src/ui/Assets/Styles/components/_related.scss
+++ b/src/ui/Assets/Styles/components/_related.scss
@@ -10,6 +10,10 @@
     margin-bottom: govuk-spacing(4)
   }
 
+  &__heading-s {
+    margin-bottom: govuk-spacing(1);
+  }
+
   .govuk-button {
     margin-bottom: 0;
   }
