--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -147,22 +147,23 @@
         }
 
         <hr class="related__section-break">
-        <h4 class="heading-medium remove-top-margin">Formatting</h4>
-        <h5 class="heading-small">Links</h5>
-        <p>Use square brackets [] around the link text and round brackets () around the link URL. Make sure there are no spaces between the brackets.</p>
 
-        <p>For example:<br /> [GOV.UK](https://gov.uk/)</p>
+        <h4 class="govuk-heading-m">Formatting</h4>
+        <h5 class="govuk-heading-s related__heading-s">Links</h5>
+        <p class="govuk-body">Use square brackets [] around the link text and round brackets () around the link URL. Make sure there are no spaces between the brackets.</p>
 
-        <h5 class="heading-small">Lists</h5>
-        <p>To create a bulleted list:</p>
-        <ul class="list list-bullet">
+        <p class="govuk-body">For example:<br /> [GOV.UK](https://gov.uk/)</p>
+
+        <h5 class="govuk-heading-s related__heading-s">Lists</h5>
+        <p class="govuk-body">To create a bulleted list:</p>
+        <ul class="govuk-list govuk-list--bullet">
           <li>use asterisks (*) to create a bullet point (hyphens also work)</li>
           <li>make sure there is one space after the asterisk</li>
           <li>leave 1 empty line space before the bullets start, and one after</li>
         </ul>
 
-        <p>For example:</p>
-        <p>* list item 1<br/>* list item 2</p>
+        <p class="govuk-body">For example:</p>
+        <p class="govuk-body">* list item 1<br/>* list item 2</p>
       </aside>
 
     </div>
