--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -78,7 +78,7 @@
                 How school placements work
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.SchoolPlacement.DisplayText()
+                @courseEnrichment.HowSchoolPlacementsWork.DisplayText()
             </dd>
           </dl>
         </div>
