--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -60,7 +60,7 @@
 
         <div class="course-parts__item">
           <h3 class="course-parts__title">About this course</h3>
-          <a class="course-parts__action" href="@Url.Action("About", "Course", new { ucasCode = Model.Course.UcasCode })">Edit</a>
+          <a class="course-parts__action" href="@Url.Action("About", "Course", new { Model.RouteData.UcasCode, Model.RouteData.InstCode, Model.RouteData.AccreditingProviderId })">Edit</a>
           <dl class="course-parts__fields">
             <dt class="course-parts__fields__label">
                 About this course
