Add course requirements enrichment ui

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -84,6 +84,31 @@
         </div>
 
         <div class="course-parts__item">
+          <h3 class="course-parts__title">Requirements and eligbility</h3>
+          <a class="course-parts__action" href="@Url.Action("Requirements", "Course", new { Model.RouteData.UcasCode, Model.RouteData.InstCode, Model.RouteData.AccreditingProviderId })">Edit</a>
+          <dl class="course-parts__fields">
+            <dt class="course-parts__fields__label">
+              Qualifications needed
+            </dt>
+            <dd class="course-parts__fields__value">
+                @courseEnrichment.Qualifications.DisplayText()
+            </dd>
+            <dt class="course-parts__fields__label">
+              Personal qualities (optional)
+            </dt>
+            <dd class="course-parts__fields__value">
+                @courseEnrichment.PersonalQualities.DisplayText()
+            </dd>
+            <dt class="course-parts__fields__label">
+              Other requirements (optional)
+            </dt>
+            <dd class="course-parts__fields__value">
+                @courseEnrichment.OtherRequirements.DisplayText()
+            </dd>
+          </dl>
+        </div>
+
+        <div class="course-parts__item">
           <h3 class="course-parts__title">Training locations</h3>
           @foreach (var school in Model.Course.Schools)
           {
