Added unit tests for course requirements enrichment

--- a/src/ui/Views/Course/Requirements.cshtml
+++ b/src/ui/Views/Course/Requirements.cshtml
@@ -9,7 +9,7 @@
 <a href="@Url.Action("Variants", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
 
  <main role="main" class="govuk-main-wrapper" id="main-content">
-  <form asp-controller="Course" asp-action="About" method="post" data-module="form">
+  <form asp-controller="Course" asp-action="Requirements" method="post" data-module="form">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Requirements and eligibility</h1>
